Converted logger css to stylus Added checkForBots() from known IPs URIs are now decoded for readability Logs are now accessed via double click Label style is now global Fixed invite table items scaling oddly Fixed selection bug when opening log modal Fixed log line text overflow bleeding

--- a/static/inviter/inviter.css
+++ b/static/inviter/inviter.css
@@ -78,7 +78,6 @@ label {
 }
 .invite-table {
   width: 614px;
-  height: 50%;
   margin: 50px auto 0 auto;
   border-spacing: 0 10px;
 }
